# nim-mcp-server

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: chroma_db.py  chunker.py  file_utils.py  nim_api.py  server.py
tests/: conftest.py  test_chroma_db.py  test_chunker.py  test_file_utils.py  test_nim_api.py  test_server.py
