[project]
name = "nim-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
    "tree-sitter-rust",
    "tree-sitter-zig",
    "tree-sitter-go",
]
