[project]
name = "nim-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.0.0",
    "chromadb>=0.4.0",
    "httpx>=0.27.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
    "tree-sitter-rust",
    "tree-sitter-zig",
    "tree-sitter-go",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pyright>=1.1.300",
    "ruff>=0.4.0",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
